tests/type-errors/10-logical-type.flt
// Logical operators require bool
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
1 && 2
// --- Output:
TypeError: Cannot unify int with bool
